--- a/src/app/shared/components/price-range-slider/price-range-slider.component.html
+++ b/src/app/shared/components/price-range-slider/price-range-slider.component.html
@@ -19,8 +19,7 @@
     <div id="Group_2628_rbg">
       
       <div id="Group_2627_rbh">
-          <span style="margin-left: 10%;">From</span>
-        
+          <span >From</span>        
           <div id="Group_2626_rbj">
     
           <input class="Rectangle_1314_rbk" [(ngModel)]="minValue" 
