--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -86,7 +86,7 @@
                 }
                 background-color: #f7f7f7;
                 border-radius: 10px 10px 0px 0px;
-                margin-top: 50px;
+                margin-top: 5%;
                 overflow: hidden;
                 .tab {
                     display: inline-block;
@@ -330,8 +330,7 @@
 
                 .applyBtn {
                     height: 50px;
-                    margin-top: 16px;
-                    // width: 95%;
+                    margin-top: 42px;                    // width: 95%;
                     min-width: 90px;
                     border-radius: 10px;
                     &:first-of-type{
@@ -434,10 +433,10 @@
                     ul.dropdown-menu {
                         margin-top: 25px !important ;
                         // display: block;
-                        padding: 10px;
+                        padding: 16px;
                         border-top: none;
                         width: 326px ;
-                        height: 202px !important;
+                        height: 215px !important;
                         border-radius: 10px;
                         @media (max-width: 425px) {
                             width: 340px;
@@ -507,17 +506,20 @@
                     width: auto;
                     @media (min-width:1170px) and (max-width:1610px)  {
                         display: flex;
-                        flex-direction: column;
+                        flex-direction: row;
                         margin-top: 0;
-                        margin-bottom: 15px;
+                        margin-bottom: 0px;
                         .firstbtn{
                             margin-left: 0;
-                            margin-right: 0;
+                            margin-right: 5px;
                         }
                         .applyBtn{
                             height: 45px;
                             font-size: 13px;
                             max-width: 100%;
+                            min-width: 60%;
+                        }
+                        .continueBtn{
                             min-width: 100%;
                         }
                     }
