--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,9 +2,12 @@
     box-shadow: 0px -3px 16px #59595919;
     .logo {
         display: block;
-        width: 250px;
-        height: 80px;
-        background: transparent url('../../assets/images/logo.svg') 0% 0% no-repeat padding-box;
+        width: fit-content;
+        height: fit-content;
+        
+        img{
+            width: 110px;
+        }
     }
 
     .the-first-platform-that-offer1 {
@@ -18,7 +21,7 @@
     h3 {
         color: #2C2C2C;
         font-size: 1.15rem;
-        margin-bottom: 5%;
+        margin-bottom: 10%;
         font-weight: bold;
     }
     p {
@@ -30,6 +33,7 @@
     }
     .social-links {
         span {
+            cursor: pointer;
             display: inline-block;
             opacity: 1;
             width: 24px;
@@ -58,6 +62,25 @@
     .line-break {
         border: 1px solid #FD7363;
         background: transparent linear-gradient(180deg, #FD4965 0%, #FD7363 100%) 0% 0% no-repeat padding-box;
-        margin-top: 0px;
     }
+
+    .left-sec {
+        .downlaod {
+            img {
+                width: 30%;
+                @media (max-width: 1024px) {
+                    width: 165px;
+                }
+                margin-right: 5px;
+                display: inline-block !important;
+                cursor: pointer;
+                @media (max-width: 768px) {
+                    width: 170px;
+                }
+            }
+        }
+    }
+
+
+    
 }
