--- a/src/app/shared/components/search-result/search-result.component.html
+++ b/src/app/shared/components/search-result/search-result.component.html
@@ -174,16 +174,38 @@
                                 <div class="card-body" style="cursor: pointer;" (click)="navigateToItemDetails(item)">
                                     <div class="row">
                                         <div class="col-12">
+                                            <h6>
+                                                {{ item['title'] }}
+                                            </h6>
+
                                             <h5 class="card-title">
                                                 {{'propertyDetails.EGP' | translate}}
                                                 <!-- <br> -->
                                                 {{ numberWithCommas(item['price'])}}
                                             </h5>
-                                            <span class="location">
-                                                <img src="../../../../assets/images/noun_Location_1911856@2x.png"
-                                                    alt="..." />
-                                                {{activeLang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
-                                            </span>
+                                            
+                                            <div class="row">
+
+                                                <div class="col-6">
+                                                    <span class="location">
+                                                        <img src="../../../../assets/images/noun_Location_1911856@2x.png"
+                                                            alt="..." />
+                                                        {{activeLang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
+                                                    </span>
+
+                                                </div>
+                                                
+
+                                                <div class="col-6">
+                                                    <span class="date">
+                                                        <img src="../../../../assets/images/date.png"
+                                                            alt="..." />
+                                                            {{ setDate(item['created_at']) }}
+                                                        </span>
+
+                                                </div>
+
+                                            </div>
                                         </div>
                                         <!-- <div class="col-4 float-end" style="position: relative;">
                                             <nz-progress class="float-end" nzType="circle"
@@ -196,7 +218,7 @@
                                     </div>
                                     <div class="card-text">
                                         <div class="row">
-                                            <div class="col-6 desc" *ngFor="let c of item['criteria'] | slice:0:4">
+                                            <div class="col-3 desc" *ngFor="let c of item['criteria'] | slice:0:4">
                                                 <img class="img-icon" src="{{getCriteriaImageSrc(c)}}" alt=".." />
                                                 {{getCriteriaOptions(c)}}
                                             </div>
@@ -210,6 +232,8 @@
 
                 </div>
             </div>
+           
+           
             <div *ngIf="results.length == 0">
                 <div class="no-data">
                     <div class="no-data__icon">
