--- a/src/app/shared/components/search-result/search-result.component.scss
+++ b/src/app/shared/components/search-result/search-result.component.scss
@@ -111,6 +111,17 @@
         }
     }
 
+    .date {
+        display: block;
+        font-size: 14px;
+        color: #ababb6;
+        padding-bottom: 10px;
+        img {
+            width: 15px;
+            margin-right: 3px;
+        }
+    }
+    
     .card-text {
         color: #ABABB6;
 
